Fixed:- z-index added for footer of item detail

--- a/app/styles/templates/_index.scss
+++ b/app/styles/templates/_index.scss
@@ -12,10 +12,10 @@
   width: 100%;
   border-top: 1px solid;
   padding-top: 0.7rem;
+  z-index: 100;
 
   .navigation_menus {
     position: relative;
-
     .small-block-grid-5 {
       li:not(:last-child) {
         width: 22%;
